Fix slight graphical quality hitches on small screens

--- a/data/style.css
+++ b/data/style.css
@@ -23,7 +23,7 @@ body { text-align: center; }
 @media only screen and (max-width: 1300px) {
   .navbar { height: 90px; }
   .navbar-padding { margin-top: 90px; }
-  .navbar-content { padding-top: 30px; }
+  .navbar-content { padding-top: 40px; }
 }
 
 /* https://stackoverflow.com/a/4407335 */
